invalid_tests/functions/test6.go
func main() {
    var result int
    result = add(5, 3)      // OK - função definida
    result = multiply(2, 4) // Erro - função não definida
}
